Fix update button text alignment in settings page

--- a/src/components/singlePost/singlePost.css
+++ b/src/components/singlePost/singlePost.css
@@ -1,3 +1,49 @@
 .singlePost {
     flex: 9;
 }
+
+.singlePostWrapper {
+    padding: 20px;
+    padding-right: 40px;
+}
+
+.singlePostImg {
+    width: 100%;
+    height: 500px;
+    border-radius: 5px;
+    object-fit: cover;
+}
+
+.singlePostTitle {
+    font-size: 28px;
+    font-weight: 600;
+    margin: 10px;
+    text-align: center;
+    color: #333;
+    position: relative;
+}
+
+.singlePostEdit {
+    float: right;
+    font-size: 16px;
+}
+
+.singlePostIcon {
+    margin-left: 10px;
+    cursor: pointer;
+    color: #444;
+}
+
+.singlePostInfo {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    color: #999;
+}
+
+.singlePostDesc {
+    line-height: 1.8;
+    font-size: 18px;
+    color: #555;
+}
